# fedem-foundation

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  gtest.h
src/Admin/: CMakeLists.txt  FedemAdmin.C  FedemAdmin.H  README.md  version.h
src/FFaFunctionLib/: CMakeLists.txt  FFaDeviceFunctionInterface.f90  FFaFunctionManager.C  FFaFunctionManager.H  FFaFunctionProperties.C  FFaFunctionProperties.H  FFaMsgInterface.f90  FFaUserFuncInterface.f90  FFaUserFuncPlugin.C  FFaUserFuncPlugin.H  FFaUserFuncPlugin_F.C  explicitFunctions.f90  explicitFunctionsModule.f90  waveFunctions.f90  waveFunctionsModule.f90
src/FFaFunctionLib/FFaFunctionDLL/: CMakeLists.txt  FFaFunction.C  FFaFunction.h
src/FFaFunctionLib/FFaFunctionTests/: CMakeLists.txt  dummies.f90  funcTest.C  funcTest.f90
src/FFaLib/: CMakeLists.txt
src/FFaLib/FFaAlgebra/: CMakeLists.txt  FFa3DLocation.C  FFa3DLocation.H  FFa3PArc.C  FFa3PArc.H  FFaAlgebra.C  FFaAlgebra.H  FFaBody.C  FFaBody.H  FFaBodyHandlerInterface.f90  FFaBodyHandler_F.C  FFaBodyParser.C  FFaCheckSum.C  FFaCheckSum.H  FFaMat33.C  FFaMat33.H  FFaMat34.C  FFaMat34.H  FFaMath.C  FFaMath.H  FFaTensor1.C  FFaTensor1.H  FFaTensor2.C  FFaTensor2.H  FFaTensor3.C  FFaTensor3.H  FFaTensorTransforms.C  FFaTensorTransforms.H  FFaTensorTransformsInterface.f90  FFaTensorTransforms_F.C  FFaUnitCalculator.C  FFaUnitCalculator.H  FFaVec3.C  FFaVec3.H  FFaVolume.C  FFaVolume.H
src/FFaLib/FFaCmdLineArg/: CMakeLists.txt  FFaCmdLineArg.H  FFaCmdLineArgImplementation.C  FFaCmdLineArgInterface.f90  FFaCmdLineArg_F.C  FFaOptionFileCreator.C  FFaOptionFileCreator.H
src/FFaLib/FFaContainers/: CMakeLists.txt  FFaByteArray.C  FFaByteArray.H  FFaField.H  FFaFieldBase.C  FFaFieldBase.H  FFaFieldContainer.C  FFaFieldContainer.H  FFaQueryBase.H  FFaReference.C  FFaReference.H  FFaReferenceList.C  FFaReferenceList.H
src/FFaLib/FFaDefinitions/: CMakeLists.txt  FFaAppInfo.C  FFaAppInfo.H  FFaListViewItem.C  FFaListViewItem.H  FFaMsg.C  FFaMsg.H  FFaMsg_F.C  FFaResultDescription.C  FFaResultDescription.H  FFaVersionNumber.C  FFaVersionNumber.H  FFaViewItem.H  FFaViewItemUtils.C
src/FFaLib/FFaDynCalls/: CMakeLists.txt  FFaDynCB.H  FFaSwitchBoard.C  FFaSwitchBoard.H
src/FFaLib/FFaGeometry/: CMakeLists.txt  FFaCompoundGeometry.C  FFaCompoundGeometry.H  FFaConeGeometry.C  FFaConeGeometry.H  FFaCylinderGeometry.C  FFaCylinderGeometry.H  FFaGeometryBase.H  FFaLineGeometry.C  FFaLineGeometry.H  FFaPlaneGeometry.C  FFaPlaneGeometry.H  FFaPointSetGeometry.C  FFaPointSetGeometry.H  FFaPyramidGeometry.C  FFaPyramidGeometry.H  FFaSphereGeometry.C  FFaSphereGeometry.H  FFaTetrahedronGeometry.C  FFaTetrahedronGeometry.H
src/FFaLib/FFaOS/: CMakeLists.txt  FFaDynamicLibraryBase.C  FFaDynamicLibraryBase.H  FFaExport.H  FFaFilePath.C  FFaFilePath.H  FFaFilePathInterface.f90  FFaFortran.H  FFaIO.H  FFaIO.c  FFaMatherrHandler.C  FFaTag.C  FFaTag.H  FFaTag_C.h
src/FFaLib/FFaOperation/: CMakeLists.txt  FFaBasicOperations.C  FFaBasicOperations.H  FFaOpUtils.C  FFaOpUtils.H  FFaOperation.H
src/FFaLib/FFaPatterns/: CMakeLists.txt  FFaGenericFactory.H  FFaInitialisation.H  FFaMemPool.C  FFaMemPool.H  FFaSingelton.H
src/FFaLib/FFaProfiler/: CMakeLists.txt  FFaMemoryProfiler.C  FFaMemoryProfiler.H  FFaMemoryProfiler_F.C  FFaProfiler.C  FFaProfiler.H  FFaProfilerInterface.f90  FFaProfiler_F.C
src/FFaLib/FFaString/: CMakeLists.txt  FFaEnum.H  FFaParse.C  FFaParse.H  FFaStringExt.C  FFaStringExt.H  FFaTokenizer.C  FFaTokenizer.H
src/FFaLib/FFaTests/: BodyTest.C  CMakeLists.txt  FFaTest.C  GeometryTest.C  Q_Sylindermodell_D10m_L15m.ftc  Stift_Kurz.ftc  T_Sylindermodell_D10m_L15m.ftc  cad2ftc.C  cube3.ftc  cube4.ftc  test_FFa.C  test_FFaEnum.C  test_FFaVersion.C
src/FFaLib/FFaTypeCheck/: CMakeLists.txt  FFaTypeCheck.C  FFaTypeCheck.H
src/FFaMathExpr/: CMakeLists.txt  FFaMathExpr.C  FFaMathExpr.H  FFaMathExprFactory.C  FFaMathExprFactory.H  FFaMathExprFactory_F.C  FFaMathExprInterface.f90  FFaMathFunction.C  FFaMathOps.C  FFaMathOps.H  FFaMathString.C  FFaMathString.H  FFaMathVar.C  FFaMathVar.H
src/FFaMathExpr/FFaMathExprTests/: CMakeLists.txt  eval_expression.C  main.C  (+1 more)
src/FFlLib/: CMakeLists.txt  FFlAttributeBase.C  FFlAttributeBase.H  FFlConnectorItems.C  FFlConnectorItems.H  FFlElementBase.C  FFlElementBase.H  FFlFEAttributeRefs.C  FFlFEAttributeRefs.H  FFlFEAttributeSpec.C  FFlFEAttributeSpec.H  FFlFEElementTopSpec.C  FFlFEElementTopSpec.H  FFlFENodeRefs.C  FFlFENodeRefs.H  FFlFEResultBase.H  FFlField.H  FFlFieldBase.C  FFlFieldBase.H  FFlGroup.C  FFlGroup.H  FFlInit.H  FFlLinkCSMask.H  FFlLinkHandler.C  FFlLinkHandler.H  FFlLinkHandlerInterface.f90  FFlLinkHandler_F.C  FFlLoadBase.C  FFlLoadBase.H  FFlMemPool.C  FFlMemPool.H  FFlNamedPartBase.C  FFlNamedPartBase.H  FFlPartBase.C  FFlPartBase.H  FFlReference.H  FFlTypeInfoSpec.H  FFlUtils.C  FFlUtils.H  FFlVertex.C  (+5 more)
src/FFlrLib/: CMakeLists.txt  FFlrFEResult.C  FFlrFEResult.H  FFlrFEResultBuilder.C  FFlrFEResultBuilder.H  FFlrFringeCreator.C  FFlrFringeCreator.H  FFlrResultResolver.C  FFlrResultResolver.H  FapFringeSetup.H
src/FFpLib/: CMakeLists.txt
src/FFrLib/: CMakeLists.txt  FFrEntryBase.C  FFrEntryBase.H  FFrEnums.H  FFrExtractor.C  FFrExtractor.H  FFrExtractorInterface.f90  FFrExtractor_F.C  FFrFieldEntryBase.C  FFrFieldEntryBase.H  FFrItemGroup.C  FFrItemGroup.H  FFrObjectGroup.C  FFrObjectGroup.H  FFrReadOp.H  FFrReadOpImpl.C  FFrReadOpInit.H  FFrResultContainer.C  FFrResultContainer.H  FFrSuperObjectGroup.C  FFrSuperObjectGroup.H  FFrVariable.C  FFrVariable.H  FFrVariableReference.C  FFrVariableReference.H
src/FiDeviceFunctions/: CMakeLists.txt  FiASCFile.C  FiASCFile.H  FiCurveASCFile.C  FiCurveASCFile.H  FiDACFile.C  FiDACFile.H  FiDeviceFunctionBase.C  FiDeviceFunctionBase.H  FiDeviceFunctionFactory.C  FiDeviceFunctionFactory.H  FiDeviceFunctionFactory_F.C  FiRAOTable.C  FiRAOTable.H  FiRAOTable_F.C  FiRPC3File.C  FiRPC3File.H  FiSwappedIO.H  fiDeviceFunctionInterface.f90  fiRAOTableInterface.f90
src/FiUserElmPlugin/: CMakeLists.txt  FiUserElmInterface.f90  FiUserElmPlugin.C  FiUserElmPlugin.H  FiUserElmPlugin_F.C
(+264 files in other folders)
